--- a/examples/naivecoin/package.json
+++ b/examples/naivecoin/package.json
@@ -9,14 +9,8 @@
   "author": "hainv",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.16.2",
     "body-parser": "^1.15.2",
-    "cross-env": "^5.0.1",
     "crypto-js": "^3.1.6",
-    "elliptic": "^6.4.0",
-    "express": "~4.11.1",
-    "lodash": "^4.17.4",
-    "ts-node": "^3.2.0",
-    "ws": "^3.0.0"
+    "express": "~4.11.1"
   }
 }
